Fix page not stretching on medium sized screens

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -68,8 +68,24 @@
 }
 
 
-@media (min-width: 700px){
+@media (min-width: 700px) and (max-width: 1500px){
 
+  .root{
+    grid-template-columns: min-content minmax(350px, 1fr) min-content;
+    grid-template-rows: 60px min-content;
+    grid-template-areas:
+    "logo controls preview"
+    "nav edit preview";
+    padding: 20px;
+    gap: 20px;
+  }
+
+  body{
+    display: block;
+  }
+}
+
+@media (min-width: 1500px){
   .root{
     grid-template-columns: min-content minmax(500px, 1fr) min-content;
     grid-template-rows: 60px min-content;
@@ -78,6 +94,11 @@
     "nav edit preview";
     padding: 20px;
     gap: 20px;
+  }
+
+  body{
+    display: flex;
+    place-content: center;
   }
 }
 
