--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -35,6 +35,4 @@ a:visited{
 body{
     overflow: visible;
     background-color: var(--main-dark);
-    display: flex;
-    place-content: center;
 }
